[package]
name = "sword_game"
version = "0.0.0"
authors = ["Moocow9m <10301261+Moocow9m@users.noreply.github.com>"]
edition = "2018"
description = "A simple sword game for the web"
repository = "https://github.com/AustinCC-CSSO/SwordGame"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.79"

#console_error_panic_hook = "0.1.7"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
