[package]
name = "sword_game"
version = "0.0.0"
authors = ["Moocow9m <10301261+Moocow9m@users.noreply.github.com>"]
edition = "2018"
description = "A simple sword game for the web"
repository = "https://github.com/AustinCC-CSSO/SwordGame"
license = "AGPLv3"

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1